# guadalinex-bibliotecas-v5

apps/gbiblio-stats/: gbiblio-stats_0.1.dsc  gbiblio-stats_0.1_i386.build  gbiblio-stats_0.1_i386.changes  gbiblio-stats_0.1_i386.deb
apps/gbiblio-ubiquity/tags/gbiblio-ubiquity-0.9guada3gbiblio17/: configure.ac
apps/gbiblio-ubiquity/tags/gbiblio-ubiquity-0.9guada3gbiblio17/debian/: rules
apps/gbiblio-ubiquity/tags/gbiblio-ubiquity-0.9guada3gbiblio17/src/scripts/: final_fixes.sh
apps/gbiblio-ubiquity/trunk/: Makefile.am  configure.ac
apps/gbiblio-ubiquity/trunk/data/: Makefile.am
apps/gbiblio-ubiquity/trunk/data/templates/: Makefile.am  sources.list.server
apps/gbiblio-ubiquity/trunk/debian/: changelog  control  postinst  preinst  prerm
apps/gbiblio-ubiquity/trunk/src/automatically_partition/: Makefile.am
apps/gbiblio-ubiquity/trunk/src/automatically_partition/60biblio/: Makefile.am  choices
apps/gbiblio-ubiquity/trunk/src/frontend/: guada_ui.py
apps/gbiblio-ubiquity/trunk/src/recipes/: 20guadalinex
apps/gbiblio-ubiquity/trunk/src/scripts/: Makefile.am  final_fixes.sh
apps/gbiblio-ubiquity/trunk/target-config/: 50install_profile
apps/usplash-theme-gbiblio/: usplash-theme-gbiblio_0.1_i386.build
doc/: guia_referencia.odt  manual_gbiblio-v0.1.odt  manual_gbiblio-v1.0.odt
doc/cuestionarios/: cuestionario_conformidad.odt  cuestionario_satisfaccion.odt
doc/manual_administracion/: manual_administracion-1.0.odt
doc/manual_instalacion/: manual_instalación-v0.1.odt  manual_instalación-v1.0.odt
gbiblio-v5-actualizacion/: claves.py  gendebs
gbiblio-v5-actualizacion.orig/: changelog-gbiblio-v5-cliente-actualizacion  changelog-gbiblio-v5-servidor-actualizacion  editchangelog
gbiblio-v5-actualizacion.orig/gbiblio-v5-servidor-actualizacion/: DEBDEPENDS
gbiblio-v5-actualizacion/debs/: gbiblio-v5-cliente-actualizacion_0.2_i386.changes  gbiblio-v5-cliente-actualizacion_0.3.dsc  gbiblio-v5-cliente-actualizacion_0.4.dsc  gbiblio-v5-cliente-actualizacion_0.4_i386.changes  (+3 more)
(+899 files in other folders)
