SUBDIRS = src data

CLEANFILES = \
	configure.in config.h.in

DISTCLEANFILES = aclocal.m4 compile py-compile config.guess config.sub configure depcomp install-sh ltmain.sh Makefile.in missing

EXTRA_DIST = \
        AUTHORS                 \
        NEWS                    \
        README 


#Ignore scrollkeeper files
DISTCHECK_CONFIGURE_FLAGS = --disable-scrollkeeper
